# FRC2026_Java_AK_Swerve_Robot

./: .gitignore  build.gradle
.wpilib/: wpilib_preferences.json
ascope_assets/Robot_Spitfire/: config.json
mcp-server/: pyproject.toml  server.py
mcp-server/frc_telemetry_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/main/deploy/apriltags/home/: bio_practice_field.json
src/main/deploy/apriltags/welded/: 2026-rebuilt-welded-blue.json  2026-rebuilt-welded-hub-only.json  2026-rebuilt-welded-no-single.json  2026-rebuilt-welded-red.json
src/main/deploy/pathplanner/autos/: Left LYNK Double Swipe.auto  Left Over Bump Double Swipe.auto  Left Windham Double Swipe Lite.auto  Left Windham Double Swipe.auto  OTF Recovery Test.auto  Right LYNK Double Swipe.auto  Right Over Bump Double Swipe.auto  Right Windham Double Swipe.auto  S7 Double Swipe.auto
src/main/deploy/pathplanner/paths/: Drive Back.path  LT Sweep.path  LTrench through NZ Lite.path  LTrench through NZ.path  Left Cross Trench to NZ.path  Left NZ Cross Bump.path  Left Trench Lite to NZ.path  NZ back to Left Trench Lite Flipped Rotation.path  NZ back to Left Trench Lite.path  NZ back to Left Trench.path  NZ back to Right Trench.path  OTF Recovery Test.path  RT Sweep.path  RTrench through NZ.path  Right Cross Trench to NZ.path  Right NZ Cross Bump.path  S1 Swipe 1 Intake.path  S1 Swipe 1 Shoot.path  S1 Swipe 2 Intake.path  S7 Swipe 1 Intake.path  S7 Swipe 1 Shoot.path  S7 Swipe 1.path  S7 Swipe 2 Intake.path  ancientDig.path  ancientDigMirrored.path  fossilFracture.path  (+1 more)
(+35 files in other folders)
